@@ -1,3 +1,10 @@
+sratom (0.6.3) unstable;
+
+  * Various minor code cleanups
+  * Make sratom_free() safe to call on NULL
+
+ -- David Robillard <d@drobilla.net>  Thu, 27 Dec 2018 14:17:06 -0500
+
 sratom (0.6.2) stable;
 
   * Various minor code cleanups
